# nc-ingestor

./: API_DOCUMENTATION.md  Cargo.toml  README.md
src/: cli.rs  embeddings.rs  error.rs  ingestor.rs  lib.rs  main.rs  retry.rs  schema_builder.rs
src/mongo/: mod.rs
src/neo4j/: mod.rs
src/postgres/: mod.rs
src/qdrant/: mod.rs
src/sqlite/: mod.rs
tests/: integration_tests.rs
